# simpleca

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.py  setup.py  sign.py
ca/: ca.crt  ca.key  intermediate.crt  intermediate.key
certs/: server.chain.crt  server.crt  server.key
templates/: base.html  csr-check.html  csr-upload.html  download.html  index.html
